--- a/package.json
+++ b/package.json
@@ -70,12 +70,12 @@
     "express": "^4.21.2",
     "framer-motion": "^12.5.0",
     "lucide-react": "^0.473.0",
-    "next": "^15.4.6",
+    "next": "^16.0.7",
     "next-themes": "^0.4.6",
     "qrcode.react": "^4.2.0",
-    "react": "18",
+    "react": "^19.2.1",
     "react-day-picker": "^8.10.1",
-    "react-dom": "18",
+    "react-dom": "^19.2.1",
     "react-easy-crop": "^5.5.1",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.6.0",
