--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "next": "15.5.9",
     "eslint-config-next": "15.5.9",
     "@next/env": "15.5.9",
-    "qs": "^6.14.1"
+    "qs": "^6.14.1",
+    "h3": "^1.15.5",
+    "undici": "^7.18.2",
+    "elliptic": "^6.6.1"
   },
   "scripts": {
     "dev": "next dev",
