--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "next": "15.5.9",
     "eslint-config-next": "15.5.9",
     "@next/env": "15.5.9",
-    "qs": "^6.14.1"
+    "qs": "^6.14.1",
+    "h3": "^2.0.1-rc.11",
+    "undici": "^7.19.0",
+    "elliptic": "^6.6.1",
+    "lodash": "^4.17.23"
   },
   "scripts": {
     "dev": "next dev",
